--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -45,6 +45,7 @@
                     <table class="table table-hover">
                         <thead class="table-light">
                             <tr>
+                                <th style="width: 60px;">S.No.</th>
                                 <th>Name</th>
                                 <th>Email</th>
                                 <th>Username</th>
@@ -56,6 +57,7 @@
                         <tbody>
                             {% for user in users %}
                             <tr>
+                                <td>{{ loop.index }}</td>
                                 <td>{{ user.full_name }}</td>
                                 <td>{{ user.email }}</td>
                                 <td>{{ user.username }}</td>
@@ -83,7 +85,7 @@
                             </tr>
                             {% else %}
                             <tr>
-                                <td colspan="6" class="text-center text-muted">No users found</td>
+                                <td colspan="7" class="text-center text-muted">No users found</td>
                             </tr>
                             {% endfor %}
                         </tbody>
