--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -105,6 +105,15 @@
                             </select>
                         </div>
                         <div class="col-md-2">
+                            <label class="form-label">Priority</label>
+                            <select class="form-select" name="priority">
+                                <option value="">All</option>
+                                <option value="URGENT" {% if filters.priority == 'URGENT' %}selected{% endif %}>URGENT</option>
+                                <option value="IMPORTANT" {% if filters.priority == 'IMPORTANT' %}selected{% endif %}>IMPORTANT</option>
+                                <option value="DAILY TASK" {% if filters.priority == 'DAILY TASK' %}selected{% endif %}>DAILY TASK</option>
+                            </select>
+                        </div>
+                        <div class="col-md-2">
                             <label class="form-label">Department</label>
                             <select class="form-select" name="department_id">
                                 <option value="">All</option>
@@ -113,7 +122,7 @@
                                 {% endfor %}
                             </select>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-2">
                             <label class="form-label">Client Name</label>
                             <input type="text" class="form-control" name="client_name" value="{{ filters.client_name }}">
                         </div>
