--- a/templates/admin/analytics.html
+++ b/templates/admin/analytics.html
@@ -166,7 +166,7 @@
                                         <td>{{ stat.completed }}</td>
                                         <td>
                                             {% if stat.total > 0 %}
-                                                {{ ((stat.completed / stat.total) * 100)|round(1) }}%
+                                                {{ stat.completion_rate|round(1) }}% {{ stat.medal }}
                                             {% else %}
                                                 0%
                                             {% endif %}
