--- a/templates/base.html
+++ b/templates/base.html
@@ -88,6 +88,23 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     {% block extra_js %}{% endblock %}
+    
+    {% if current_user.is_authenticated %}
+    <script>
+        // Send FCM token registration message to React Native WebView
+        // This runs after login when user is authenticated
+        (function() {
+            // Check if we're in a React Native WebView
+            if (window.ReactNativeWebView) {
+                // Send message to React Native to register FCM token
+                window.ReactNativeWebView.postMessage(
+                    JSON.stringify({ type: "SEND_FCM_TOKEN" })
+                );
+                console.log('Sent SEND_FCM_TOKEN message to React Native');
+            }
+        })();
+    </script>
+    {% endif %}
 </body>
 </html>
 
